Started working on the Abstract Syntax Tree and some concrete nodes